2019-September-29 Struan Robertson

		* MesmerILT.cpp: ILT method updated following QA tests.

		* MesmerFlags.cpp, CollisionOperator.cpp, defaults.xml: Allowed for more flexible definitions 
		of the start and end times of a species profile.

		* ReactionManager.cpp: Minor update of error message.

2019-September-08 Struan Robertson

		* MesmerILT.cpp: ILT method altered to allow for multiple Arrhenius expressions.

2019-September-08 Struan Robertson

		* MesmerILT.cpp: Initial changes to ILT method to allow for multiple Arrhenius expressions.

2019-September-01 Struan Robertson

		* Addition of VC 16 project files.

		* CompoundMicroRate.cpp: Initial class definition of compound microcanonical rate coefficient 
		calculator.

		* ExchangeReaction.h/.cpp: Initial class definition of reversible exchange reaction.

		* CollisionOperator.h/.cpp: Tidying of revised equilibrium fraction method.

2019-August-05 Struan Robertson

		* CollisionOperator.h/.cpp, System.cpp: Provisional check-in of revised equilibrium fraction
		method.

2019-May-27 Struan Robertson

		* CollisionOperator.cpp, MesmerTools.cpp, MicroRates.cpp: Fix for incorrect cell number 
		update in automated cut-off checker.

2019-May-27 Struan Robertson

		* unitsConversion.h/.cpp, Constants.cpp, gDensityOfStates.cpp: Pressure unit "bar" added.

		* ConditionsManager.cpp: "factor" added to PTSet definition to allow logarithmic specification 
		of pressure and easier fall-off curve calculation and manipulation.

2019-May-06 Struan Robertson

		* MesmerTools.h/.cpp, AssociationReaction.cpp, DensityOfStates.cpp, UnitTest.cpp: Better
		warning message when grain average does not return the number of grains requested.

		* memserPlugins.xsd: Schema update.

		* FittingUtils.cpp: Adding warning message when bounds check fails

		* main.cpp: Version update.

		* HinderedRotorQM1D.cpp: Minor tidy of commented out code.

		* Documentation: version update.

		* Makefile: Updated to include uTST.
 