@@ -26,7 +26,8 @@ namespace mesmer
     DISSOCIATION,
     IRREVERSIBLE_ISOMERIZATION,
     IRREVERSIBLE_EXCHANGE,
-    BIMOLECULAR_SINK,
+    BIMOLECULAR_SINK, 
+    BIMOLECULAR_EXCHANGE,
     PSEUDOISOMERIZATION,
     SECONDORDERASSOCIATION,
     DIFFUSION,
